--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">exampleCompose</string>
     <string name="cc">\"Show Less \"</string>
+    <string name="label">this label</string>
 </resources>
